Suppress mockk warning
See https://github.com/mockk/mockk/issues/1171